# btc-solo-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: miner.env.example
docs/: best-practice-plan.md  release-checklist.md
scripts/: audit-release.sh  bootstrap-cpuminer.sh  check-ckpool-user.sh  ci.sh  package-macos.sh  preflight.sh  run-solo-miner.sh  smoke-start.sh  status.sh  verify.sh
scripts/lib/: miner-env.sh
src/: App.tsx  api.ts  i18n.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
