[package]
name = "btc_solo_lab"
version = "0.1.0"
description = "BTC mainnet solo mining lab controller"
authors = ["Jack182617"]
license = "GPL-2.0-or-later"
repository = "https://github.com/Jack182617/btc-solo-lab"
edition = "2024"

[lib]
name = "btc_solo_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.11.2", features = [] }
